--- a/css/login.css
+++ b/css/login.css
@@ -190,6 +190,7 @@ header {
 
 #container {
     width: 35%;
+    margin-top: 50px;
 }
 
 #banner {
@@ -239,10 +240,13 @@ header {
 
 #login_container {
     display: flex;
-    height: 250px;
-    
+    height: auto;
     flex-direction: column;
     align-items: center;
+}
+
+#login_container h2 {
+    margin-bottom: 10px;
 }
 
 #login_forms {
@@ -252,13 +256,14 @@ header {
     width: 75%;
     padding: 20px;
     border-radius: 12px;
+    box-shadow: 0px 0px 20px 3px #00000024;;
 }
 
 .login-label {
     height: 40px;
     background-color: #0000000d;
     color: #000;
-    font-size: 0.9rem;
+    font-size: 1rem;
     padding: 0 20px 0 20px;
     border: none;
     border-radius: 6px;
@@ -267,17 +272,46 @@ header {
 
 #remember_label {
     margin-top: 10px;
+    margin-bottom: 15px;
+    color: #505050;
+    cursor: pointer;
     
 }
 
 #remember_label a {
     float: right;
+    text-decoration: none;
+    color: #505050;
+}
+
+#remember_label:hover, #remember_label a:hover {
+    color: #000;
+
 }
 
 #submit_login {
     width: 70%;
-    position: absolute;
-    margin-top: 190px;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    background-color: var(--color-secundary-1);
+    color: #505050;
+    font-weight: 600;
+    box-shadow: 0px 0px 20px 3px #00000024;
+    cursor: pointer;
+}
+    
+#submit_login:hover {
+    background-color: #ffcb45;
+}
+
+@media screen and (max-width: 1170px) {
+    #remember_label {
+     text-align: left;
+    }
 }
 
 
