--- a/css/index.css
+++ b/css/index.css
@@ -3,23 +3,11 @@
 
 :root {
     --color-primary-1: #f9eec9;
-    --color-secundary-1: #ffd685;
+    --color-secondary-1: #ffd685;
     --color-titles-1: #b4000f;
 }
 
-pallete {
-    color: #f9eec9;
-    color: #d3b786;
-    color: #e4b455;
-    color: #90a74c;
-    color: #af672d;
-    color: #b4000f;
-    color: #597718;
-    color: #770d15;
-    color: #58483a;
-}
-
-*  {
+* {
     font-family: 'Ubuntu', sans-serif;
     margin: 0;
     padding: 0;
@@ -44,7 +32,7 @@ section {
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    background-color: var(--color-secundary-1);
+    background-color: var(--color-secondary-1);
     color: #1d1d1dad;
     border-radius: 12px;
     padding: 10px 14px;
@@ -55,6 +43,15 @@ section {
 
 .btn-default:hover {
     background-color: #ffcb45;
+}
+
+.btn-background {
+    background-color: var(--color-primary-1);
+    margin-left: 0.5rem;
+}
+
+.btn-background:hover {
+    background-color: #ffebaa;
 }
 
 .social-media-buttons {
@@ -127,30 +124,26 @@ header {
 
 .nav-item.active a {
     color: #0b0b0bad;
-    border-bottom: 3px solid var(--color-secundary-1);
+    border-bottom: 3px solid var(--color-secondary-1);
 }
 
 #buttons_menu {
     display: flex;
 }
 
-#login_btn {
-    background-color: var(--color-primary-1);
-    margin-left: 0.5rem;
-}
-
-#login_btn:hover {
-    background-color: #ffebaa;
-}
-
-#mobile_btn, #mobile_menu {
+#mobile_btn,
+#mobile_menu {
     display: none;
 }
 
 @media screen and (max-width: 1170px) {
-    #nav_list, #menu_btn, #login_btn {
+
+    #nav_list,
+    #menu_btn,
+    #login_btn {
         display: none;
     }
+
     #mobile_btn {
         display: block;
         border: none;
@@ -178,6 +171,12 @@ header {
 #mobile_nav_list .nav-item {
     list-style: none;
     text-align: center;
+}
+
+#mobile_login_btn {
+    background-color: var(--color-primary-1);
+    padding: 2px 14px 2px 14px;
+    border-radius: 6px;
 }
 
 /* Home */
@@ -214,7 +213,8 @@ header {
     gap: 24px;
 }
 
-#container_buttons a {
+#container_buttons a,
+#container_buttons i {
     text-decoration: none;
     color: #1d1d1d;
 }
@@ -248,7 +248,7 @@ header {
 }
 
 .shape {
-    background-color: var(--color-secundary-1);
+    background-color: var(--color-secondary-1);
     width: 50%;
     height: 100%;
     position: absolute;
@@ -260,20 +260,22 @@ header {
 }
 
 @media screen and (max-width: 1170px) {
-   #home {
-    min-height: 100%;
-    padding-top: 0px;
-   }
+    #home {
+        min-height: 100%;
+        padding-top: 0px;
+    }
 
-   #banner, #banner img, #home .shape {
-    display: none;
-   }
+    #banner,
+    #banner img,
+    #home .shape {
+        display: none;
+    }
 
-   #container {
-    width: 100%;
-    text-align: center;
-    align-items: center;
-   }
+    #container {
+        width: 100%;
+        text-align: center;
+        align-items: center;
+    }
 }
 
 /* Menu */
@@ -311,6 +313,7 @@ header {
 .dish-image {
     width: 100%;
     height: 100%;
+    object-fit: contain;
 }
 
 .dish-fav {
@@ -340,14 +343,15 @@ header {
 .dish-price {
     display: flex;
     text-align: center;
-    gap:20px;
+    gap: 20px;
 }
 
 @media screen and (max-width: 1170px) {
     #dishes {
         flex-wrap: wrap;
-        justify-content: center;   
+        justify-content: center;
     }
+
     #dish {
         width: calc(50% - 12px);
     }
@@ -387,12 +391,13 @@ header {
     width: 50%;
 }
 
-#testimonials_content .section-title, .section-subtitle {
+#testimonials_content .section-title,
+.section-subtitle {
     text-align: center;
 }
 
 #feedbacks {
-    display:flex;
+    display: flex;
     flex-direction: column;
     gap: 20px;
     margin-bottom: 40px;
@@ -473,7 +478,7 @@ header {
 /* Footer */
 
 footer {
-    background-color: var(--color-secundary-1);
+    background-color: var(--color-secondary-1);
 }
 
 footer img {
